--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" style="text-align: center;"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
+
 </html>
